# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  Trident.toml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: error.rs  lib.rs
programs/stablecoin/src/instructions/: blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs
programs/stablecoin/src/state/: config.rs  minter.rs  mod.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: seed.ts  test-ws.ts
services/compliance/: Dockerfile  package.json
services/compliance/src/: index.ts
services/indexer/: Dockerfile  package.json
services/indexer/src/: index.ts
services/mint-service/: Dockerfile  package.json
services/mint-service/src/: index.ts
services/webhook/: Dockerfile  package.json  tsconfig.json
services/webhook/src/: index.ts
tests/: oracle.test.ts  preset-config.test.ts  sss1.test.ts  sss2.test.ts  tui-utils.test.ts
trident-tests/fuzz_0/: Cargo.toml  fuzz_instructions.rs
